<resources>
    <string name="app_name">AndroidAcademyTest</string>
    <string name="back">Back</string>
    <string name="age">13+</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="review">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="downey">Robert Downey Jr.</string>
    <string name="evans">Chris Evans</string>
    <string name="ruffalo">Mark Ruffalo</string>
    <string name="hemsworth">Chris Hemsworth</string>
    <string name="movie_name" formatted="false">Avengers: \nEnd Game</string>
    <string name="movies_list">Movies list</string>
    <string name="movies_list_aeg">Avengers: End Game</string>
    <string name="movies_list_tenet">Tenet</string>
    <string name="tag_tenet">Action, Sci-fi, Triller</string>
    <string name="review_tenet">98 review"</string>
    <string name="aeg_duration">137 min</string>
    <string name="tenet_duration">97 min</string>
    <string name="ww_duration">120 min</string>
    <string name="bw_duration">102 min</string>
    <string name="ww_tag">Action, Adventure, Fantasy</string>
    <string name="bw_tag">Action, Adventure, Sci-Fi</string>
    <string name="ww_review">38 review</string>
    <string name="bw_rewiew">74 review</string>
    <string name="ww_name">Wonder Woman</string>
    <string name="bw_name">Black Window</string>

</resources>