<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/poster_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="14dp"
    android:layout_marginTop="18dp"
    android:paddingBottom="20dp"
    android:background="@drawable/poster_background_gradient">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/preview_movie" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/picture_gradient"
        app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
        app:layout_constraintEnd_toEndOf="@+id/movie_poster"
        app:layout_constraintStart_toStartOf="@+id/movie_poster"
        app:layout_constraintTop_toTopOf="@+id/movie_poster" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tag"
        android:textColor="@color/my_pink"
        android:textSize="8dp"
        app:layout_constraintStart_toStartOf="@id/poster_background"
        app:layout_constraintTop_toTopOf="@id/poster_background" />

    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/review"
        android:textColor="@color/review_grey"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ratingBar_indicator"
        app:layout_constraintTop_toBottomOf="@id/tag" />

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/movies_list_aeg"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/poster_background"
        app:layout_constraintTop_toBottomOf="@id/ratingBar_indicator" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aeg_duration"
        android:textSize="8sp"
        android:textColor="@color/my_grey"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/poster_background"
        app:layout_constraintTop_toBottomOf="@id/movie_name"/>

    <RatingBar
        android:id="@+id/ratingBar_indicator"
        style="@style/CustomRatingBarStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:rating="4"
        android:scaleX="1"
        android:scaleY="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/poster_background"
        app:layout_constraintTop_toBottomOf="@id/tag"
        />
</androidx.constraintlayout.widget.ConstraintLayout>