<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movies_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/combined_shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:srcCompat="@drawable/ic_combinedshape" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/movies_list"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/combined_shape"
            app:layout_constraintTop_toTopOf="@id/toolbar" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/poster_background_gradient"
            app:layout_constraintBottom_toBottomOf="@+id/poster_background"
            app:layout_constraintEnd_toEndOf="@+id/poster_background"
            app:layout_constraintStart_toStartOf="@+id/poster_background"
            app:layout_constraintTop_toTopOf="@+id/poster_background" />

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/layout_movie_poster"
            android:layout_marginStart="14dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>

        <TextView
            android:id="@+id/tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="214dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tag"
            android:textColor="@color/my_pink"
            android:textSize="8dp"
            app:layout_constraintStart_toStartOf="@id/poster_background"
            app:layout_constraintTop_toTopOf="@id/poster_background" />

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/poster_background"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:srcCompat="@drawable/star_icon_on" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/star_1"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:srcCompat="@drawable/star_icon_on" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/star_2"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:srcCompat="@drawable/star_icon_on" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/star_3"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:srcCompat="@drawable/star_icon_on" />

        <ImageView
            android:id="@+id/star_off"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/star_4"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:srcCompat="@drawable/star_icon_off" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/review"
            android:textColor="@color/review_grey"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/star_off"
            app:layout_constraintTop_toBottomOf="@id/tag" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/movies_list_aeg"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/poster_background"
            app:layout_constraintTop_toBottomOf="@id/star_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>